--- a/Front/CSS/common-desktop.css
+++ b/Front/CSS/common-desktop.css
@@ -4,7 +4,7 @@ body {
 }
 
 #login-form-wrapper {
-    padding: 90px 50px;
+    padding: 200px 50px;
     display: flex;
     flex-direction: column;
 }
@@ -15,6 +15,7 @@ body {
     margin: auto;
     position: relative;
     border: 2px solid rgb(224, 224, 224);
+    border-radius: 10px;
 }
 
 .yamu-textLogo {
