--- a/Front/CSS/common-desktop.css
+++ b/Front/CSS/common-desktop.css
@@ -25,13 +25,15 @@ body {
 }
 
 #yamu-textLogo-login {
-    width: 200px;
-    height: 150px;
+    width: 100px;
+    height: 18px;
+    margin: 60px auto 0 auto;
 }
 
 #login-message {
     width: 300px;
     height: 20px;
+    margin-top: 60px;
     margin-left: auto;
     margin-right: auto;
     background-color: rgb(224, 224, 224);
