--- a/Front/CSS/common-desktop.css
+++ b/Front/CSS/common-desktop.css
@@ -30,10 +30,23 @@ body {
     margin: 60px auto 0 auto;
 }
 
+#logedin-id {
+    width: 200px;
+    height: 25px;
+    margin: 40px auto 0 auto;
+    padding-top: 5px;
+    background-color: rgb(224, 224, 224);
+    border-radius: 30px;
+    text-align: center;
+    font-size: 16px;
+    font-style: italic;
+    font-weight: 400;
+}
+
 #login-message {
     width: 300px;
     height: 20px;
-    margin-top: 60px;
+    margin-top: 20px;
     margin-left: auto;
     margin-right: auto;
     background-color: rgb(224, 224, 224);
