up 로그인 회원가임 폼 수정
동작 연쇄 작용되도록 구현해둠

--- a/JavaWeb/Web/web/resources/static/css/sideMenuTemplateStyle.css
+++ b/JavaWeb/Web/web/resources/static/css/sideMenuTemplateStyle.css
@@ -37,11 +37,13 @@
     top:0;
     left:0;
     background:rgba(0,0,0,0.2);
+    z-index: 5;
 }
 
 #sideMenu
 {
     display: none;
+    z-index: 10;
 }
 #sideMenu a {
     display:block;
