--- a/JavaWeb/Web/web/resources/static/css/loginPage/loginStyle.css
+++ b/JavaWeb/Web/web/resources/static/css/loginPage/loginStyle.css
@@ -43,7 +43,6 @@ input[type="button"]:focus
 #inputButtons *
 {
     float: right;
-    margin-left: 8px;
     width: 90px;
     outline: none;
     background-color: #008cff;
@@ -54,6 +53,7 @@ input[type="button"]:focus
     border-radius: 10px;
     margin : 10px 0px 0px 5px;
     cursor: pointer;
+    text-align: center;
 }
 #inputButtons *:hover
 {
